Add lastz-rag as submodule and update wiki scripts
- Add lastz-rag repository as git submodule
- Update workspace config to include lastz-rag folder
- Simplify wiki npm scripts (dev/build/preview instead of docs:*)

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "powra.ai"]
 	path = powra.ai
 	url = https://github.com/bcoughlin/powra.ai.git
+[submodule "lastz-rag"]
+	path = lastz-rag
+	url = https://github.com/bcoughlin/lastz-rag.git
