--- a/powra-wiki/package.json
+++ b/powra-wiki/package.json
@@ -4,9 +4,9 @@
   "description": "Powra Gaming Wiki - Multi-game wiki site",
   "main": "index.js",
   "scripts": {
-    "docs:dev": "vitepress dev docs",
-    "docs:build": "vitepress build docs",
-    "docs:preview": "vitepress preview docs"
+    "dev": "vitepress dev docs",
+    "build": "vitepress build docs",
+    "preview": "vitepress preview docs"
   },
   "keywords": [
     "wiki",
